fix: tweak dashboard button readability

--- a/meteor/client/styles/shelf/dashboard.scss
+++ b/meteor/client/styles/shelf/dashboard.scss
@@ -209,18 +209,22 @@
 		> .dashboard-panel__panel__button__label {
 			position: absolute;
 			
-			vertical-align: bottom;
 			max-height: calc(100% - 4px);
 
 			left: 4px;
 			max-width: calc(100% - 8px);
 			text-align: left;
 			hyphens: auto;
-			-webkit-hyphens: auto;
-			-ms-hyphens: auto;
-			text-transform: uppercase;
-			font-weight: 400;
-			text-shadow: 1px 1px 0 rgba(0,0,0,0.3);
+			
+			vertical-align: top;
+			-webkit-text-stroke-color: #000;
+			-webkit-text-stroke-width: 0.02em;
+			line-height: 1.15em;
+			bottom: 3px;
+			font-family: "Roboto Condensed", sans-serif;
+			font-size: 1.17em;
+			font-weight: 600;
+			text-shadow: -0.5px -0.5px 0px rgba(0,0,0,1), 0.5px 0.5px 0px rgba(0,0,0,1), 0.5px 0.5px 2px rgba(0,0,0,0.7);
 			z-index: 2;
 		}
 
